--- a/src/backends/graphic/DRM/meson.build
+++ b/src/backends/graphic/DRM/meson.build
@@ -1,15 +1,7 @@
 GraphicBackendDRM = library(
     'LGraphicBackendDRM',
     sources : [
-        'LGraphicBackendDRM.cpp',
-        'LDRM.cpp',
-        'LDRMConnector.cpp',
-        'LDRMDevice.cpp',
-        'LDRMCrtc.cpp',
-        'LDRMEncoder.cpp',
-        'LDRMOutput.cpp',
-        'LDRMOutputMode.cpp',
-        'LDRMPlane.cpp'
+        'LGraphicBackendDRM.cpp'
     ],
     include_directories : include_paths + [include_directories('./..')],
     dependencies : [
@@ -18,7 +10,8 @@ GraphicBackendDRM = library(
         egl_dep,
         gl_dep,
         drm_dep,
-        gbm_dep
+        gbm_dep,
+        srm_dep
     ],
     install : true, 
     install_dir : BACKENDS_PATH)
