Add virtual method to listen to clients preferred decoration mode

--- a/src/examples/louvre-views/meson.build
+++ b/src/examples/louvre-views/meson.build
@@ -9,3 +9,22 @@ executable(
     ],
     install : true, 
     install_dir : EXAMPLES_PATH)
+
+install_data(
+    files('assets/dock_side.png',
+    'assets/dock_clamp.png',
+    'assets/toplevel_active_lower_clamp.png',
+    'assets/toplevel_active_lower_corner.png',
+    'assets/toplevel_active_side_clamp.png',
+    'assets/toplevel_active_topbar_clamp.png',
+    'assets/toplevel_active_upper_corner.png',
+
+    'assets/toplevel_inactive_lower_clamp.png',
+    'assets/toplevel_inactive_lower_corner.png',
+    'assets/toplevel_inactive_side_clamp.png',
+    'assets/toplevel_inactive_topbar_clamp.png',
+    'assets/toplevel_inactive_upper_corner.png',
+
+    'assets/toplevel_border_radius_mask.png'),
+    install_dir: '/usr/etc/Louvre/assets'
+)
