Add new assets to louvre-views example

--- a/src/examples/louvre-views/meson.build
+++ b/src/examples/louvre-views/meson.build
@@ -1,4 +1,4 @@
-sources = run_command('find', '.', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]').stdout().strip().split('\n')
+sources = run_command('find', './src', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]').stdout().strip().split('\n')
 
 executable(
     'louvre-views',
@@ -10,21 +10,9 @@ executable(
     install : true, 
     install_dir : EXAMPLES_PATH)
 
+assets = run_command('find', './assets', '-type', 'f', '-name', '*[.png]').stdout().strip().split('\n')
+
 install_data(
-    files('assets/dock_side.png',
-    'assets/dock_clamp.png',
-    'assets/toplevel_active_lower_clamp.png',
-    'assets/toplevel_active_lower_corner.png',
-    'assets/toplevel_active_side_clamp.png',
-    'assets/toplevel_active_topbar_clamp.png',
-    'assets/toplevel_active_upper_corner.png',
-
-    'assets/toplevel_inactive_lower_clamp.png',
-    'assets/toplevel_inactive_lower_corner.png',
-    'assets/toplevel_inactive_side_clamp.png',
-    'assets/toplevel_inactive_topbar_clamp.png',
-    'assets/toplevel_inactive_upper_corner.png',
-
-    'assets/toplevel_border_radius_mask.png'),
+    assets,
     install_dir: '/usr/etc/Louvre/assets'
 )
