Add doc for LAnimation and LFramebuffer classes

--- a/src/examples/louvre-views/meson.build
+++ b/src/examples/louvre-views/meson.build
@@ -1,11 +1,16 @@
 sources = run_command('find', './src', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]').stdout().strip().split('\n')
 
+fontconfig_dep = cpp.find_library('fontconfig', dirs: library_paths, required: true)
+freetype_dep = cpp.find_library('freetype', dirs: library_paths, required: true)
+
 executable(
     'louvre-views',
     sources,
     dependencies : [
         Louvre_dep,
-        wayland_server_dep
+        wayland_server_dep,
+        fontconfig_dep,
+        freetype_dep
     ],
     install : true, 
     install_dir : EXAMPLES_PATH)
