Add uption to define dock items, implement dock app icons jumping animation and fix unicode text rendering in louvre-views example

--- a/src/examples/louvre-views/meson.build
+++ b/src/examples/louvre-views/meson.build
@@ -9,8 +9,10 @@ executable(
     dependencies : [
         Louvre_dep,
         wayland_server_dep,
+        input_dep,
         fontconfig_dep,
-        freetype_dep
+        freetype_dep,
+        icuuc_dep
     ],
     install : true, 
     install_dir : EXAMPLES_PATH)
