Add LTimer class

--- a/src/meson.build
+++ b/src/meson.build
@@ -5,7 +5,7 @@ project(
     meson_version: '>= 0.56.0',
 	  default_options: [
 		'warning_level=2',
-		'buildtype=debug',
+                'buildtype=custom',
 		'cpp_std=c++11',
 	]
 )
