--- a/src/examples/louvre-weston-clone/meson.build
+++ b/src/examples/louvre-weston-clone/meson.build
@@ -1,4 +1,4 @@
-sources = run_command('find', '.', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]', check : true).stdout().strip().split('\n')
+sources = run_command('find', '.', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]', check : false).stdout().strip().split('\n')
 
 executable(
     'louvre-weston-clone',
