--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,11 @@
 project(
     'Louvre',
     'c','cpp', 
-    version : run_command('cat', files('../VERSION'), check : true).stdout().strip(),
+    version : run_command('cat', files('../VERSION'), check : false).stdout().strip(),
     meson_version: '>= 0.56.0',
 	  default_options: [
 		'warning_level=2',
-                'buildtype=custom',
+        'buildtype=custom',
 		'cpp_std=c++11',
 	]
 )
@@ -26,6 +26,7 @@ include_paths = [
 ]
 
 include_paths_sys = [
+    '/usr/include',
     '/usr/local/include',
     '/usr/include/drm',
     '/usr/include/libdrm',
@@ -34,18 +35,18 @@ include_paths_sys = [
 ]
 
 foreach p : include_paths_sys
-    if run_command('[', '-d', p, ']', check : true).returncode() == 0
+    if run_command('[', '-d', p, ']', check : false).returncode() == 0
       include_paths += [include_directories(p)]
     endif
 endforeach
 
 # All headers
-headers = run_command('find', './lib', '-type', 'f', '-name', '*.h', check : true).stdout().strip().split('\n')
+headers = run_command('find', './lib', '-type', 'f', '-name', '*.h', check : false).stdout().strip().split('\n')
 
 # Public and private API headers
-headers_classes = run_command('find', './lib/core', '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : true).stdout().strip().split('\n')
-headers_classes_private = run_command('find', './lib/core/private', '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : true).stdout().strip().split('\n')
-headers_other = run_command('find', './lib/other', '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : true).stdout().strip().split('\n')
+headers_classes = run_command('find', './lib/core', '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : false).stdout().strip().split('\n')
+headers_classes_private = run_command('find', './lib/core/private', '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : false).stdout().strip().split('\n')
+headers_other = run_command('find', './lib/other', '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : false).stdout().strip().split('\n')
 install_headers(headers_classes, install_dir : INCLUDES_PATH)
 install_headers(headers_classes_private, install_dir : INCLUDES_PATH + '/private')
 install_headers(headers_other, install_dir : INCLUDES_PATH + '/other')
@@ -59,16 +60,15 @@ globals = [
 ]
 
 foreach g : globals
-    hs = run_command('find', './lib/protocols/' + g, '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : true).stdout().strip().split('\n')
+    hs = run_command('find', './lib/protocols/' + g, '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : false).stdout().strip().split('\n')
     install_headers(hs, install_dir : INCLUDES_PATH+'/protocols/' + g)
     
-    hs_p = run_command('find', './lib/protocols/' + g + '/private', '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : true).stdout().strip().split('\n')
+    hs_p = run_command('find', './lib/protocols/' + g + '/private', '-type', 'f', '-name', '*.h', '-maxdepth', '1', check : false).stdout().strip().split('\n')
 
     if hs_p[0] != ''
     	install_headers(hs_p, install_dir : INCLUDES_PATH+'/protocols/' + g + '/private')
     endif
 endforeach
-
 
 wayland_server_dep  = cpp.find_library('wayland-server')
 gl_dep              = cpp.find_library('GL')
@@ -89,7 +89,7 @@ srm_dep             = cpp.find_library('SRM')
 
 Louvre = library(
     'Louvre',
-    sources : run_command('find', './lib', '-type', 'f', '-name', '*[.cpp,.c]', check : true).stdout().strip().split('\n'),
+    sources : run_command('find', './lib', '-type', 'f', '-name', '*[.cpp,.c]', check : false).stdout().strip().split('\n'),
     include_directories : include_paths,
     dependencies : [
         wayland_server_dep,
@@ -109,6 +109,8 @@ Louvre = library(
     ],
     install : true)
 
+meson.add_install_script('../scripts/ld.sh', get_option('prefix') + '/' + get_option('libdir'))
+
 Louvre_dep = declare_dependency(
     dependencies: [], 
     include_directories : include_paths,
@@ -126,4 +128,3 @@ if get_option('build_examples')
     subdir('examples/louvre-default')
     subdir('examples/louvre-views')
 endif
-
