--- a/src/backends/input/Libinput/meson.build
+++ b/src/backends/input/Libinput/meson.build
@@ -5,12 +5,12 @@ DRMBackend = library(
     ],
     include_directories : include_paths + [include_directories('./..')],
     dependencies : [
-        Louvre_dep,
+        louvre_dep,
         udev_dep,
 	    input_dep,
         xkbcommon_dep,
         libseat_dep
     ],
     install : true, 
-    install_dir : BACKENDS_PATH)
+    install_dir : BACKENDS_INSTALL_PATH)
 
