Add config file and replace hardcoded assets paths

--- a/src/examples/louvre-views/meson.build
+++ b/src/examples/louvre-views/meson.build
@@ -1,5 +1,12 @@
 sources = run_command('find', './src', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]', check : false).stdout().strip().split('\n')
 
+config_header = configure_file(
+  input : '../../lib/core/LConfig.h.in',
+  output : 'LConfig.h',
+  configuration : configuration_data,
+  install : false
+)
+
 executable(
     'louvre-views',
     sources,
