--- a/src/examples/louvre-weston-clone/meson.build
+++ b/src/examples/louvre-weston-clone/meson.build
@@ -1,8 +1,15 @@
 sources = run_command('find', '.', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]', check : false).stdout().strip().split('\n')
 
+config_header = configure_file(
+  input : '../../lib/core/LConfig.h.in',
+  output : 'LConfig.h',
+  configuration : configuration_data,
+  install : false
+)
+
 executable(
     'louvre-weston-clone',
-    sources : sources,
+    sources,
     dependencies : [
         louvre_dep,
         wayland_server_dep,
