Replace custom Meson options with built-in ones

--- a/src/backends/input/Libinput/meson.build
+++ b/src/backends/input/Libinput/meson.build
@@ -1,5 +1,7 @@
 DRMBackend = library(
-    'LInputBackendLibinput',
+    'libinput',
+    name_prefix : '',
+    name_suffix : 'so',
     sources : [
         'LInputBackendLibinput.cpp'
     ],
@@ -12,5 +14,5 @@ DRMBackend = library(
         libseat_dep
     ],
     install : true, 
-    install_dir : BACKENDS_INSTALL_PATH)
+    install_dir : join_paths(BACKENDS_INSTALL_PATH, 'input'))
 
