--- a/src/lib/core/LConfig.h.in
+++ b/src/lib/core/LConfig.h.in
@@ -2,8 +2,8 @@
 #define LCONFIG_H
 
 #define LOUVRE_DEFAULT_BACKENDS_PATH "@LOUVRE_DEFAULT_BACKENDS_PATH@"
-#define LOUVRE_DEFAULT_GRAPHIC_BACKEND "libLGraphicBackendDRM.so"
-#define LOUVRE_DEFAULT_INPUT_BACKEND "libLInputBackendLibinput.so"
+#define LOUVRE_DEFAULT_GRAPHIC_BACKEND "@LOUVRE_DEFAULT_GRAPHIC_BACKEND@"
+#define LOUVRE_DEFAULT_INPUT_BACKEND "@LOUVRE_DEFAULT_INPUT_BACKEND@"
 #define LOUVRE_DEFAULT_ASSETS_PATH "@LOUVRE_DEFAULT_ASSETS_PATH@"
 
 #endif // LCONFIG_H
