Introduce the LVersion struct and the LCompositor::version() method to facilitate querying the current Louvre version in use

--- a/src/meson.build
+++ b/src/meson.build
@@ -24,6 +24,10 @@ BACKENDS_INSTALL_PATH = join_paths(get_option('prefix'), get_option('libdir'), '
 ASSETS_INSTALL_PATH = join_paths(get_option('prefix'), get_option('datadir'), 'Louvre/assets')
 
 add_project_arguments([
+    '-DLOUVRE_VERSION_MAJOR=@0@'.format(VERSION_MAJOR.to_int()),
+    '-DLOUVRE_VERSION_MINOR=@0@'.format(VERSION_MINOR.to_int()),
+    '-DLOUVRE_VERSION_PATCH=@0@'.format(VERSION_PATCH.to_int()),
+    '-DLOUVRE_VERSION_BUILD=@0@'.format(VERSION_BUILD.to_int()),
     '-DLOUVRE_DEFAULT_BACKENDS_PATH="@0@"'.format(BACKENDS_INSTALL_PATH),
     '-DLOUVRE_DEFAULT_GRAPHIC_BACKEND="@0@"'.format(get_option('default_graphic_backend')),
     '-DLOUVRE_DEFAULT_INPUT_BACKEND="@0@"'.format(get_option('default_input_backend')),
