Add Viewporter protocol

--- a/src/meson.build
+++ b/src/meson.build
@@ -79,10 +79,11 @@ install_headers(headers_other, install_dir : join_paths(HEADERS_INSTALL_PATH, 'o
 
 globals = [
     'LinuxDMABuf',
-	'Wayland',
-	'XdgDecoration',
-	'XdgShell',
-    'WpPresentationTime'
+    'Wayland',
+    'XdgDecoration',
+    'XdgShell',
+    'WpPresentationTime',
+    'Viewporter'
 ]
 
 foreach g : globals
