Add the Relative Pointer protocol

--- a/src/meson.build
+++ b/src/meson.build
@@ -87,7 +87,8 @@ globals = [
     'Viewporter',
     'FractionalScale',
     'GammaControl',
-    'TearingControl'
+    'TearingControl',
+    'RelativePointer'
 ]
 
 foreach g : globals
