Simplify clipboard API

--- a/src/meson.build
+++ b/src/meson.build
@@ -151,8 +151,8 @@ if get_option('build_examples')
     freetype_dep = dependency('freetype2')
     icuuc_dep = cpp.find_library('icuuc')
 
-    #subdir('examples/louvre-weston-clone')
     subdir('examples/louvre-default')
+    subdir('examples/louvre-weston-clone')
     #subdir('examples/louvre-views')
 endif
 
