Fix presentation time sync problem

--- a/src/meson.build
+++ b/src/meson.build
@@ -83,7 +83,7 @@ globals = [
     'Wayland',
     'XdgDecoration',
     'XdgShell',
-    'WpPresentationTime',
+    'PresentationTime',
     'Viewporter',
     'FractionalScale',
     'GammaControl',
