Add session lock protocol files

--- a/src/meson.build
+++ b/src/meson.build
@@ -89,7 +89,8 @@ globals = [
     'GammaControl',
     'TearingControl',
     'RelativePointer',
-    'PointerGestures'
+    'PointerGestures',
+    'SessionLock'
 ]
 
 foreach g : globals
