Testing SHM screencopy

--- a/src/meson.build
+++ b/src/meson.build
@@ -91,7 +91,8 @@ globals = [
     'TearingControl',
     'RelativePointer',
     'PointerGestures',
-    'SessionLock'
+    'SessionLock',
+    'ScreenCopy'
 ]
 
 foreach g : globals
