Add wlr-layer-shell protocol files

--- a/src/meson.build
+++ b/src/meson.build
@@ -92,7 +92,8 @@ globals = [
     'RelativePointer',
     'PointerGestures',
     'SessionLock',
-    'ScreenCopy'
+    'ScreenCopy',
+    'LayerShell'
 ]
 
 foreach g : globals
