Add Single Pixel Buffer protocol

--- a/src/meson.build
+++ b/src/meson.build
@@ -103,7 +103,8 @@ globals = [
     'SessionLock',
     'ScreenCopy',
     'LayerShell',
-    'ForeignToplevelManagement'
+    'ForeignToplevelManagement',
+    'SinglePixelBuffer'
 ]
 
 foreach g : globals
