--- a/src/examples/louvre-weston-clone/meson.build
+++ b/src/examples/louvre-weston-clone/meson.build
@@ -1,12 +1,13 @@
-sources = run_command('find', '.', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]', check : false).stdout().strip().split('\n')
+sources = run_command('find', './src', '-type', 'f', '-name', '*[.c,.cpp,.h,.hpp]', check : false).stdout().strip().split('\n')
 
 executable(
     'louvre-weston-clone',
-    sources,
+    [sources, common_src],
     dependencies : [
         louvre_dep,
         gl_dep,
         fontconfig_dep,
-        freetype_dep
+        freetype_dep,
+        icuuc_dep
     ],
     install : true)
