--- a/src/meson.build
+++ b/src/meson.build
@@ -59,7 +59,7 @@ drm_dep             = dependency('libdrm')
 gbm_dep             = dependency('gbm')
 input_dep           = dependency('libinput')
 libseat_dep         = dependency('libseat')
-srm_dep             = dependency('SRM', version : '>=0.5.2')
+srm_dep             = dependency('SRM', version : '>=0.6.0')
 pthread_dep         = cpp.find_library('pthread')
 dl_dep              = cpp.find_library('dl')
 
@@ -104,7 +104,8 @@ globals = [
     'ScreenCopy',
     'LayerShell',
     'ForeignToplevelManagement',
-    'SinglePixelBuffer'
+    'SinglePixelBuffer',
+    'ContentType'
 ]
 
 foreach g : globals
